# plantsim

./: .gitignore  CMakeLists.txt  CMakePresets.json  Constraint.cpp  Environment.h  LICENSE  Point.cpp  Point.h  README.md  WorldState.cpp  conanfile.py  imgui.ini
bench/: CMakeLists.txt  notes.md  readme.md
bench/simulation/: CMakeLists.txt  run.cpp
bench/sycltest/: CMakeLists.txt  main.cpp
cmake/: Findimgui.cmake
conan/profiles/: all-debug  all-release  base  cpu-debug  cpu-dev-debug  cpu-dev-release  cpu-release  cpu-release-profiling  cuda-debug  cuda-dev-debug  cuda-dev-release  cuda-release
docs/: auxin_design.md  design.md  emergence_proposals.md  implementation_status.md  overall_idea.md  plant-growth.md  profiling-notes.md
include/glad/: glad.h
scripts/: benchmark.py  resource_transfer.py
shaders/map/: shader.frag  shader.vert
src/: Air.cpp  Air.h  ApplicationConfig.h  CMakeLists.txt  Cell.cpp  Cell.h  Constraint.h  Entity.cpp  Entity.h  Point.cpp  Point.h  Process.h  Random.cpp  Random.h  Soil.cpp  Soil.h  WorldState.cpp  WorldState.h  main.cpp
src/bench/: readme.md
src/bench/simulation/: CMakeLists.txt  run.cpp
src/common/: CMakeLists.txt  NotImplementedException.h  Random.h  utils.h
src/experiments/: CMakeLists.txt
src/experiments/sycl/: CMakeLists.txt
src/genetics/: Chromosome.cpp  Chromosome.h  Gene.cpp  Gene.h  IFitness.cpp  IFitness.h  Individual.cpp  Individual.h  IndividualFactory.cpp  IndividualFactory.h  Population.cpp  Population.h  SumFitness.cpp  SumFitness.h
src/plants/: Air.cpp  Air.h  AxialRectangularMap.cpp  AxialRectangularMap.h  AxialRectangularMap.tpp  Cell.cpp  Cell.h  Constraint.cpp  Constraint.h  Entity.cpp  Entity.h  EntityChromosome.cpp  EntityChromosome.h  Environment.cpp  Environment.h  HormoneOption.cpp  HormoneOption.h  Map.cpp  Map.h  Point.cpp  Point.h  Process.cpp  Process.h  Soil.cpp  Soil.h  WorldState.cpp  WorldState.h
src/plants/iterators/: AxialRectangularMapIterator.cpp  AxialRectangularMapIterator.h  Iterator.cpp  Iterator.h
src/resources/: CMakeLists.txt  ResourceLoader.cpp  ResourceLoader.h
src/scripts/: resource_transfer.py
src/simulation/: CMakeLists.txt  CellState.h  GpuContext.h  GridTopology.h  ISimulator.h  MapPrinter.h  Options.cpp  Options.h  Simulator.cpp  Simulator.h  SimulatorFactory.cpp  SimulatorFactory.h  SimulatorOptions.cpp  SimulatorOptions.h  SimulatorOptionsProvider.cpp  SimulatorOptionsProvider.h  State.h
src/simulation/cpu/: CpuSimulator.cpp  CpuSimulator.h  DeadDecay.cpp  DeadDecay.h  GridShiftHelper.cpp  GridShiftHelper.h  LightComputation.cpp  LightComputation.h  MaintenanceAndDeath.cpp  MaintenanceAndDeath.h  NutrientDiffusion.cpp  NutrientDiffusion.h  Photosynthesis.cpp  Photosynthesis.h  RandomNeighborReproduction.cpp  RandomNeighborReproduction.h  ResourceTransfer.cpp  ResourceTransfer.h  SoilAbsorption.cpp  SoilAbsorption.h  SoilDiffusion.cpp  SoilDiffusion.h
src/simulation/cpu/stages/: DeadDecay.cpp  DeadDecay.h  LightComputation.cpp  MaintenanceAndDeath.cpp  MaintenanceAndDeath.h  Photosynthesis.cpp  RandomNeighborReproduction.cpp  RandomNeighborReproduction.h  ResourceTransfer.cpp  ResourceTransfer.h  SoilAbsorption.cpp  SoilAbsorption.h  SoilDiffusion.cpp  SoilDiffusion.h
src/simulation/cpu/utils/: GridShiftHelper.cpp
src/simulation/cuda/: CudaSimulator.cu  CudaSimulator.h  CudaState.cu  CudaState.h  CudaUtils.cuh  RandomNeighborReproduction.cu  RandomNeighborReproduction.h  ResourceTransfer.cu  ResourceTransfer.h
src/simulation/initializers/: Initializers.h  PolicyApplication.h  StateInitializer.h
src/simulation/initializers/actions/: Actions.h  CompositeAction.h  SeedCell.h  SeedSoil.h  SetCellType.h  SetNutrient.h  SetResource.h  SetSoilResources.h  SetStateField.h  SetValue.h
src/simulation/initializers/amounts/: Amounts.h  DistanceFromCenter.h  FixedAmount.h  FunctionAmount.h  LinearGradient.h
src/simulation/initializers/regions/: BottomRowsRegion.h  CircleRegion.h  CompositeRegion.h  FullGrid.h  GridRegion.h  Regions.h  SingleCell.h
src/simulation/sycl/: SyclSimulator.h
src/visualisation/: CMakeLists.txt  GraphicsContext.cpp  GraphicsContext.h  OpenGLDebug.cpp  OpenGLDebug.h  README.md  RenderLoop.cpp  RenderLoop.h  WindowDefinition.cpp  WindowDefinition.h
src/visualisation/glad/: glad.c
src/visualisation/rendering/: GLVertex.cpp  GLVertex.h  GuiFrameRenderer.cpp  GuiFrameRenderer.h  Renderer.cpp  Renderer.h  RendererRegistry.h  RenderingOptions.cpp  RenderingOptions.h  RenderingOptionsProvider.cpp  RenderingOptionsProvider.h  SimulationControl.h  SliderHelper.h  WorldStateRenderer.cpp  WorldStateRenderer.h
src/visualisation/rendering/converters/: AxialRectangularMapToMeshConverter.cpp  AxialRectangularMapToMeshConverter.h  MapConverter.cpp  MapConverter.h  MeshData.cpp  MeshData.h  OffsetRectangularMapToMeshConverter.cpp  OffsetRectangularMapToMeshConverter.h
src/visualisation/rendering/shaders/: ProgramBuilder.cpp  ProgramBuilder.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
src/visualisation/shaders/map/: shader.vert
test/: CMakeLists.txt  WorldStateTests.cpp  entity_test.cpp  main.cpp
test/dummies/: EmptyProcess.cpp  EmptyProcess.h  TestIndividual.h  TestIndividualFactory.cpp  TestIndividualFactory.h
test/genetics/: ChromosomeTests.cpp  chromosome_test.cpp  genetic_algorithm_test.cpp  sumfitness_test.cpp
test/plants/: AxialRectangularMapAccessTests.cpp  AxialRectangularMapTests.cpp  EntityTests.cpp  WorldStateTests.cpp
test/simulation/: GpuContextTests.cpp  GridTopologyTests.cpp  LightComputationTests.cpp  LightPhotosynthesisIntegrationTests.cpp  MapPrinterTests.cpp  PhotosynthesisTests.cpp  ResourceTransferTests.cpp  SimulationTestHelper.h  SoilAbsorptionTests.cpp
test/simulation/stages/: LightComputationTests.cpp  LightPhotosynthesisIntegrationTests.cpp  PhotosynthesisTests.cpp  SoilAbsorptionTests.cpp
